--- a/tests/test.yml
+++ b/tests/test.yml
@@ -2,6 +2,9 @@
 - hosts: localhost
   gather_facts: no
   connection: local
-  tasks:
 
-  # Add tasks and assertions for testing the service here.
+  tags:
+    - all-tests
+
+  roles:
+    - role: ../..
