--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: "core_imagestreams"
   author: Christoph Görn
   description: Create some default ImageStreams required by Project Thoth
   company: Red Hat Inc., the Office of the CTO
