added graph-sync-scheduler and build-watcher
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -34,4 +34,6 @@
       - "cleanup-imagestream"
       - "isis-api-imagestream"
       - "management-api-imagestream"
+      - "graph-sync-scheduler-imagestream"
+      - "build-watcher-imagestream"
     ignore_errors: true
